# backend-com-python-Luiza-Labs

./: .gitignore  sistemabancário.py  texte.py
API-Bancaria/: .gitignore  auth_deps.py  database.py  main.py  pyproject.toml  requirements.txt  security.py
API-Bancaria/src/controllers/: auth.py  routes.py
API-Bancaria/src/models/: account.py  transaction.py
API-Bancaria/src/schemas/: AccountIn.py  TransactionCreate.py  TransactionsReadIn.py
API-Bancaria/src/views/: AccountOut.py  TransactionReadOut.py
Banco de dados/: dbAPI.py  meu_banco.db  transacao.py
Banco de dados assíncrono/: .gitignore  blog.db  database.py  main.py  pyproject.toml  requirements.txt
Banco de dados assíncrono/controllers/: post.py
Banco de dados assíncrono/models/: posts.py
Banco de dados assíncrono/schemas/: post.py
Banco de dados assíncrono/views/: post.py
Desafios/: sistemabancário3.py  sistemabancárioPOO.py  sistemabancárionovo.py
Desenvolvimento web/: APIs.md  Boas Prática com apis.md  FastAPI.md
Desenvolvimento web/APIs Assíncronas com FastAPI/DIO-blog/: .gitignore  main.py  pyproject.toml  requirements.txt
Desenvolvimento web/APIs Assíncronas com FastAPI/DIO-blog/controllers/: post.py
Desenvolvimento web/APIs Assíncronas com FastAPI/DIO-blog/schemas/: post.py
Desenvolvimento web/APIs Assíncronas com FastAPI/DIO-blog/views/: post.py
Integrando Python com Banco de dados relacionais/: memory  pyproject.toml  sqlAlchemyApplication.py  sqlAlchemyCoreApplication.py  teoria.md
Manipulação de arquivos/: boaspráticas.py  escrevendoemarquivos.py  lendoarquivos.py  manipulando arquivos.txt  os_shutil.py  tratamentoexceções.py
POO/: classes.py  encapsulamento.py  herança.py  herançamultipla.py  interface.py  metodosdeclasseeestaticos.py  polimorfismo.py  propriedades.py  propriedades2.py  teoria.md  variáveisdeclasseeinstancia.py
decoradores/: decorador_com_argumentos.py  decorador_com_return_func_decorada.py  funcoesefuncoes.py  (+2 more)
(+22 files in other folders)
