[project]
name = "banco-de-dados-assíncrono"
version = "0.1.0"
description = ""
authors = [
    {name = "Moi10legend",email = "moisesflopesf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.123.4,<0.124.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
